--- a/event.html
+++ b/event.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="./css/paul-style.css">
     <link rel="stylesheet" href="./css/oreStyles.css">
     <link rel="stylesheet" href="css/mavdavis-style.css">
-    <link rel="stylesheet" href="css/tolu-style.css">
+    <link rel="stylesheet" href="/css/tolu-style.css">
     <!-- google font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -37,7 +37,7 @@
                                 <li class="nav-item">
                                     <a class="nav-link active text-light d-flex justify-content-center align-items-center fw-bolder"
                                         aria-current="page" href="index.html">
-                                        <img src="mavdavis-img/pink-vector.png" alt="" class="me-1 logo w-100 h-auto">
+                                        <img src="mavdavis-img/pink-vector.png" alt="" class="me-1 logo w-auto h-auto">
                                         Home</a>
                                 </li>
                                 <li class="nav-item dropdown">
