--- a/incentive.html
+++ b/incentive.html
@@ -34,7 +34,7 @@
                                 <li class="nav-item">
                                     <a class="nav-link active text-light d-flex justify-content-center align-items-center fw-bolder"
                                         aria-current="page" href="index.html">
-                                        <img src="mavdavis-img/pink-vector.png" alt="" class="me-1 logo w-100 h-auto">
+                                        <img src="mavdavis-img/pink-vector.png" alt="" class="me-1 logo w-auto h-auto">
                                         Home</a>
                                 </li>
                                 <li class="nav-item dropdown">
