--- a/index.html
+++ b/index.html
@@ -170,8 +170,8 @@
   <!-- The Muktano Section -->
 
   <div id="mkutano-section">
-      <div class="container-flui">
-          <div class="row justify-content-center align-items-center w-100">
+      <div class="no-pad">
+          <div class="row justify-content m-0 p-0 align-items-center bg-dark w-100">
               <div class="col-lg-8 left-mkutano-section py-5">
                   <div class="card bg-transparent border-0">
                       <div class="bigger">
@@ -196,8 +196,8 @@
                       </div>
                   </div>
               </div>
-              <div class="col-lg-4 row2">
-                  <div class="card bg-transparent border-0">
+              <div class="col-lg-4 p-0 bg-danger">
+                  <div class="card  mx-auto  bg-success bg-transparent border-0 image-fluid">
                           <img src="simple-soul-img/image 6.png" alt="man" class="w-auto h-auto">
                   </div>
               </div>
@@ -241,7 +241,7 @@
     <!-- incentive section -->
 
     <section id="incentive-section">
-        <div class="row flex justify-content-between w-100">
+        <div class="row flex justify-content-between m-0 w-100">
             <div class="col-lg-6 col-12 left-incentive-section mx-auto">
                 <div class="card mx-auto border-0 bg-transparent">
                     <div class="bigger container pt-5">
@@ -264,7 +264,7 @@
                 </div>
             
             </div>
-            <div class="col-lg-3 right-incentive-section">
+            <div class="col-lg-3 p-0 right-incentive-section">
                 <div class="card">
                     <img src="./thia-img/image 5.png" alt="man" class="w-auto h-100">
                 </div>
