--- a/creative.html
+++ b/creative.html
@@ -31,7 +31,7 @@
                         <ul class="navbar-nav m-auto mb-2 mb-lg-0">
                         <li class="nav-item">
                             <a class="nav-link active text-light d-flex justify-content-center align-items-center fw-bolder" aria-current="page" href="index.html">
-                                <img src="Landing-page-sec-6/Vector.png" alt=""  class="me-1 logo w-100 h-auto"> Home</a>
+                                <img src="Landing-page-sec-6/Vector.png" alt=""  class="me-1 logo w-auto h-auto"> Home</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link text-light" href="event.html">
