--- a/event.html
+++ b/event.html
@@ -9,8 +9,7 @@
     <link rel="stylesheet" href="css/eventstyle.css">
     <link rel="stylesheet" href="./css/paul-style.css">
     <link rel="stylesheet" href="./css/oreStyles.css">
-    <link rel="stylesheet" href="css/mavdavis-style.css">
-    <link rel="stylesheet" href="/css/tolu-style.css">
+    <link rel="stylesheet" href="css/tolu-style.css">
     <!-- google font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
