--- a/daura.html
+++ b/daura.html
@@ -37,7 +37,7 @@
                         <a class="nav-link active fw-bold ms-4 text-white" aria-current="page" href="index.html"><i class="bi bi-arrow-up-left for-color"></i>Home</a>
                       </li>
                       <li class="nav-item dropdown">
-                        <a class="nav-link active fw-bold ms-4 text-white" href="event.html" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <a class="nav-link active fw-bold ms-4 text-white" href="event.html">
                           Event
                         </a>
                       </li>
