worked on responsiveness

--- a/daura.html
+++ b/daura.html
@@ -232,7 +232,7 @@
         <div class="contact text-white pb-5">
             <div class="row justify-content-between">
                 <div class="col-lg-6 col-md-6 pt-5">
-                    <div class="contact-content" style="padding-top: 80px;">
+                    <div class="contact-content ps-3" style="padding-top: 80px;">
                         <div class="contact-head pb-2">
                             <h3 class="display-4">Contact</h3>
                         </div>
@@ -247,8 +247,8 @@
                                 <div class="col-lg-4 col-md-6 col-5">
                                     <p class="fs-2">Follow Us</p>
                                 </div>
-                                <div class="col-lg-8 col-md-6 col-7 pt-2">
-                                    <div class="row me-0">
+                                <div class="col-lg-8 col-md-6 col-md-3 col-7 pt-2">
+                                    <div class="row">
                                         <div class="col-lg-3 col-md-3 col-3">
                                             <img src="tolu-img/contact-facebook.png" alt="Facebook">
                                         </div>
@@ -265,11 +265,11 @@
                     </div>
                 </div>
                 <div class="col-lg-5 col-md-6 py-5">
-                    <div class="form mt-5">
+                    <div class="form mt-5 ps-3">
                         <form action="#">
                             <div class="form-checkbox mb-3">
                                 <div class="row">
-                                    <div class="col-lg-1 col-md-1 col-1 pe-0">
+                                    <div class="col-lg-1 col-md-1 col-1 pe-0"  style="padding-left: 12px;">
                                         <input type="checkbox" name="" id="checkbox" class="me-2">
                                     </div>
                                     <div class="col-lg-11 col-md-11 col-11 ps-0">
