--- a/incentive.html
+++ b/incentive.html
@@ -32,7 +32,7 @@
                         <div class="collapse navbar-collapse text-light" id="navbarSupportedContent">
                             <ul class="navbar-nav m-auto mb-2 mb-lg-0">
                                 <li class="nav-item">
-                                    <a class="nav-link active text-light d-flex justify-content-center align-items-center fw-bolder"
+                                    <a class="nav-link active text-light d-flex align-items-center fw-bolder"
                                         aria-current="page" href="index.html">
                                         <img src="mavdavis-img/pink-vector.png" alt="" class="me-1 logo w-auto h-auto">
                                         Home</a>
@@ -193,7 +193,7 @@
             <div class="contact text-white pb-5">
                 <div class="row justify-content-between">
                     <div class="col-lg-6 col-md-6 pt-5">
-                        <div class="contact-content" style="padding-top: 80px;">
+                        <div class="contact-content ps-3" style="padding-top: 80px;">
                             <div class="contact-head pb-2">
                                 <h3 class="display-4">Contact</h3>
                             </div>
@@ -226,11 +226,11 @@
                         </div>
                     </div>
                     <div class="col-lg-5 col-md-6 py-5">
-                        <div class="form mt-5">
+                        <div class="form mt-5 ps-3">
                             <form action="#">
                                 <div class="form-checkbox mb-3">
                                     <div class="row">
-                                        <div class="col-lg-1 col-md-1 col-1 pe-0">
+                                        <div class="col-lg-1 col-md-1 col-1 pe-0"  style="padding-left: 12px;">
                                             <input type="checkbox" name="" id="checkbox" class="me-2">
                                         </div>
                                         <div class="col-lg-11 col-md-11 col-11 ps-0">
@@ -238,36 +238,36 @@
                                         </div>
                                     </div>
                                 </div>
-                               <div class="row">
-                                   <div class="col-lg-6">
+                                <div class="row">
+                                    <div class="col-lg-6">
                                         <div class="name-form mb-4">
                                             <input type="text" name="name" class="form-control border-0 rounded-0" id="name" placeholder="Name" required>
                                         </div>
-                                   </div>
-                                   <div class="col-lg-6">
+                                    </div>
+                                    <div class="col-lg-6">
                                         <div class="lastname-form mb-4">
                                             <input type="text" name="lastname" class="form-control border-0 rounded-0" id="lastname" placeholder="Last Name" required>
                                         </div>
                                     </div>
-                               </div>
-                               <div class="row">
-                                   <div class="col-lg-8">
+                                </div>
+                                <div class="row">
+                                    <div class="col-lg-8">
                                         <div class="email-form mb-4">
                                             <input type="email" name="email" class="form-control border-0 rounded-0" id="email" placeholder="Email" required>
                                         </div>
-                                   </div>
-                                   <div class="col-lg-4">
-                                       <div class="phone-form mb-4">
-                                           <input type="tel" name="phone" class="form-control border-0 rounded-0" id="phonenumber" placeholder="Phone..." required>
-                                       </div>
-                                   </div>
-                               </div>
-                               <div class="message-form mb-3">
-                                   <textarea name="message" id="message" class="border-0 rounded-0 text-white" placeholder="Message..." rows="10"></textarea>
-                              </div>
-                              <div class="send-form mt-4">
-                                  <a href="#" class="text-decoration-none text-color border border-white border-2" style="padding: 10px 50px;">Send</a>
-                              </div>
+                                    </div>
+                                    <div class="col-lg-4">
+                                        <div class="phone-form mb-4">
+                                            <input type="tel" name="phone" class="form-control border-0 rounded-0" id="phonenumber" placeholder="Phone..." required>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="message-form mb-3">
+                                    <textarea name="message" id="message" class="border-0 rounded-0 text-white" placeholder="Message..." rows="10"></textarea>
+                                </div>
+                                <div class="send-form mt-4">
+                                    <a href="#" class="text-decoration-none text-color border border-white border-2" style="padding: 10px 50px;">Send</a>
+                                </div>
                             </form>
                         </div>
                     </div>
@@ -317,7 +317,8 @@
             </div>
         </div>
     </section>
-    <!-- footersection -->
+
+    <!-- footer section -->
     <footer>
         <div class="container-fluid text-white">
             <div class="row">
