--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
                     <img src="thia-img/Group 47.png" alt="" class="img-fluid">
                 </div>
                 <div class="creative-text">
-                    <p class="display-4 fw-bolder border-bottom pb-4">Creative</p>
+                    <p class="display-4 fw-bolder text-white border-bottom pb-4">Creative</p>
                 </div>
                 <div class="creative-dots text-end">
                     <img src="thia-img/Group.png"  class="img-fluid" alt="">
@@ -569,7 +569,7 @@
             <div class="contact text-white pb-5">
                 <div class="row justify-content-between">
                     <div class="col-lg-6 col-md-6 pt-5">
-                        <div class="contact-content" style="padding-top: 80px;">
+                        <div class="contact-content ps-3" style="padding-top: 80px;">
                             <div class="contact-head pb-2">
                                 <h3 class="display-4">Contact</h3>
                             </div>
@@ -602,7 +602,7 @@
                         </div>
                     </div>
                     <div class="col-lg-5 col-md-6 py-5">
-                        <div class="form mt-5">
+                        <div class="form mt-5 ps-3">
                             <form action="#">
                                 <div class="form-checkbox mb-3">
                                     <div class="row">
@@ -615,7 +615,7 @@
                                     </div>
                                 </div>
                                 <div class="row">
-                                    <div class="col-lg-6" style="padding-left: 12px;">
+                                    <div class="col-lg-6">
                                         <div class="name-form mb-4">
                                             <input type="text" name="name" class="form-control border-0 rounded-0" id="name" placeholder="Name" required>
                                         </div>
@@ -627,7 +627,7 @@
                                     </div>
                                 </div>
                                 <div class="row">
-                                    <div class="col-lg-8" style="padding-left: 12px;">
+                                    <div class="col-lg-8">
                                         <div class="email-form mb-4">
                                             <input type="email" name="email" class="form-control border-0 rounded-0" id="email" placeholder="Email" required>
                                         </div>
