worked on the pages

--- a/event.html
+++ b/event.html
@@ -105,6 +105,63 @@
             </div>
         </div>
     </div>
+    <!-- etinosa part -->
+    <section id="events-section" class="text-white" style="background-color: #0B131F;">
+        <div class="container-fluid">
+            <div class="events ms-auto" style="width: 90%; padding: 120px 0;">
+                <div class="row">
+                    <div class="col-lg-6 col-md-6">
+                        <div class="energy mx-auto" style="width: 80%;">
+                            <div class="energy-head">
+                                <h2 class="display-2"><span class="fw-bold" style="color: #B91869;">Energy</span><br><span class="fw-bold">Mkutano</span><br> 2021 <img src="events-img/booknow.png" class="img-fluid" alt=""></h2>
+                            </div>
+                            <div class="energy-text">
+                                <p class="lh-lg pb-3"><strong>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</strong> Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
+
+                                <p class="lh-lg pb-3">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries.</p>
+                            </div>
+                            <div class="energy-bottom">
+                                <div class="bottom-line pb-3">
+                                    <img src="events-img/Line10.png" class="img-fluid" alt="">
+                                </div>
+                                <div class="bottom-text pb-3">
+                                    <div class="content d-flex">
+                                        <div class="date d-flex me-5">
+                                            <div class="image">
+                                                <img src="events-img/calendar.png" class="img-fluid me-2" alt="">
+                                            </div>
+                                            <div class="date-text">
+                                                <p>June 28 & 29</p>
+                                            </div>
+                                        </div>
+                                        <div class="location d-flex">
+                                            <div class="image">
+                                                <img src="events-img/location.png" class="img-fluid me-2" alt="">
+                                            </div>
+                                            <div class="location-text">
+                                                <p><strong>Mestil Hotel,</strong> Kampala</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-5 col-md-6">
+                        <div class="energy-image">
+                            <img src="events-img/events-img.png" class="img-fluid" alt="">
+                        </div>
+                    </div>
+                    <div class="col-lg-1 d-none d-lg-block text-end">
+                        <div class="col-lg-11">
+                            <img src="events-img/events-line.png" class="img-fluid" alt="">
+                        </div>
+                        <img src="events-img/EnergyMkutano2021.png" class="img-fluid mt-3" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <!-- ore begins -->
     <section class="event-section">
         <div class="gradient-bk text-center text-lg-center text-md-center text-sm-center text-white py-5">
