--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
                 </div>
                 <div class="col-lg-9 col-md-8 mx-auto">
                     <div class="card py-5 bg-transparent border-0">
-                        <div class="section-2-img"><img src="/simple-soul-img/awesome.png" alt="" class="text-light mb-3 mt-5 awesome w-auto h-auto"></div>
-                        <h1 class="mx-2 text-light fw-bold">We Curate & Create <img src="/simple-soul-img/Frame.png" alt="" class="w-auto h-auto"></h1>
+                        <div class="section-2-img"><img src="simple-soul-img/awesome.png" alt="" class="text-light mb-3 mt-5 awesome w-auto h-auto"></div>
+                        <h1 class="mx-2 text-light fw-bold">We Curate & Create <img src="simple-soul-img/Frame.png" alt="" class="w-auto h-auto"></h1>
                         <h2 class="mx-2 text-danger pb-5 fw-bolder">Media, Conferences & Incentive Travel</h2>
                         <img src="simple-soul-img/arrow down.png" alt="" class="mx-auto w-auto h-auto">
                     </div>
