--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                 </div>
             </div>
             <div class="col-lg-8 col-md-7 col-sm-12 pt-3">
-                <div class="card bg-transparent m-auto border-0">
+                <div class="card ps-3 bg-transparent m-auto border-0">
                     <p class="about-text1"><span class="about-text2">The Mkutano Company was set up to address the qualitative gap in the economic conferencing space in Uganda.</span>
                         Our events are by design, set up around deliberations that inform actionable outcomes. The Economic Mkutano
                         conference casts a diversity of participants drawn from the public sector, enterprise, and academia – providing them
@@ -124,7 +124,7 @@
             </div>
         </div>
         <div class="row py-5">
-            <div class="col-lg-3 col-md-6 col-sm-12">
+            <div class="col-lg-3 col-md-6 col-sm-12 ps-3">
                 <div class="card about-dif border-0 mt-2">
                     <img src="simple-soul-img/Mkutano_II -323 2.png" alt="" >
                     <div class="position-absolute p-4 pt-5">
@@ -139,7 +139,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-3 col-md-6 col-sm-12">
+            <div class="col-lg-3 col-md-6 col-sm-12 ps-3">
                 <div class="card bg-dark border-0 mt-2">
                     <img src="simple-soul-img/Mkutano_II -323 1.png" alt="">
                     <div class="position-absolute about-emoji">
@@ -147,7 +147,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-3 col-md-6 col-sm-12">
+            <div class="col-lg-3 col-md-6 col-sm-12 ps-3">
                 <div class="card bg-dark border-0 mt-2">
                     <img src="simple-soul-img/Mkutano_II -323 4.png" alt="">
                     <div class="position-absolute about-emoji">
@@ -155,7 +155,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-3 col-md-6 col-sm-12">
+            <div class="col-lg-3 col-md-6 col-sm-12 ps-3">
                 <div class="card bg-dark border-0 mt-2">
                     <img src="simple-soul-img/Mkutano_II -323 4.png" alt="">
                     <div class="position-absolute about-emoji">
