--- a/daura.html
+++ b/daura.html
@@ -59,7 +59,7 @@
                 <div class="text-white">
                     <div class="main py-4">
                         <div class="row py-2 for-mag text-center me-0">
-                            <div class="col-lg-1 col-md-1 col-1 for-d-side">
+                            <div class="col-lg-1 px-2 col-md-1 col-1 for-d-side">
                                 <div class="off text-center text-lg-start">
                                     <span><img src="tjdaura-img/TJfollow.png" alt="" class="img-fluid"></span>
                                     <span><img src="tjdaura-img/TJVector(3).png" alt="" class="img-fluid pt-5"></span>
@@ -79,11 +79,11 @@
                                     <H2 class="shadow fw-bold">MKUTANO</H2>
                                 </div>
                                 <div>
-                                    <div class="d-flex for-btw">
+                                    <div class="d-flex px-2 for-btw">
                                         <h5 class="fw-bold">Title Video</h5>
                                         <h5 class="fw-bold">15:00'</h5>
                                     </div>
-                                    <div class="">
+                                    <div class="px-2">
                                         <p class="justify pt-1">Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
                                         Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
                                         when an unknown printer took a galley of type and scrambled it to make a type 
