--- a/index.html
+++ b/index.html
@@ -172,13 +172,13 @@
   <div id="mkutano-section">
       <div class="no-pad">
           <div class="row justify-content m-0 p-0 align-items-center bg-dark w-100">
-              <div class="col-lg-8 left-mkutano-section py-5">
-                  <div class="card bg-transparent border-0">
-                      <div class="bigger">
+              <div class="col-lg-8 col-md-8 col-sm-12 mx-auto left-mkutano-section py-5">
+                  <div class="card bg-transparent mx-auto border-0">
+                      <div class="bigger mx-auto bg-danger">
                           <div class="first-part d-flex  d-flex-mb mx-3">
-                              <img src="simple-soul-img/Group 82.png" alt="frame" class="w-auto h-25">
+                              <img src="simple-soul-img/Group 82.png" alt="frame" class="w-auto h-25 web">
                               <h1 class="fs-1">The <span class="color">Mkutano</span></h1>
-                              <img src="simple-soul-img/Frame1.png" alt="frame" class="d-sm-none">
+                              <img src="simple-soul-img/Frame1.png" alt="frame" class="d-none d-lg-block d-md-block">
                           </div>
                           <div class="second-part gap-5 d-flex d-flex-mb">
                               <h3>Economic Mkutano</h3>
@@ -196,7 +196,7 @@
                       </div>
                   </div>
               </div>
-              <div class="col-lg-4 p-0 bg-danger">
+              <div class="col-lg-4 col-md-4 col-sm-12 p-0 bg-danger">
                   <div class="card  mx-auto  bg-success bg-transparent border-0 image-fluid">
                           <img src="simple-soul-img/image 6.png" alt="man" class="w-auto h-auto">
                   </div>
@@ -214,13 +214,13 @@
                 <img src="thia-img/image 4.png" alt="" class="img-fluid">
                 </div>  
             </div>
-            <div class="col-lg-4 col-md-6 col-12 text-light text-section ps-5 fs-10">
-                <div class="container">
-                <p class="creative-text">
-                    <span class="fw-bold"> Lorem Ipsum is simply dummy  text of the printing  and typesetting industry.</span> Lorem Ipsum has been the  industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and    scrambled it to make a type specimen book. It has  survived not only five centuries, but also the leap  into electronic typesetting, remaining essentially  unchanged.
-                </p>
-                <p class="creative-text">
-                    Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
+            <div class="col-lg-4 col-md-6 col-12 text-light text-section fs-10">
+                <div class="container mx-auto">
+                    <p class="creative-text">
+                        <span class="fw-bold"> Lorem Ipsum is simply dummy  text of the printing  and typesetting industry.</span> Lorem Ipsum has been the  industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and    scrambled it to make a type specimen book. It has  survived not only five centuries, but also the leap  into electronic typesetting, remaining essentially  unchanged.
+                    </p>
+                    <p class="creative-text">
+                     Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
                     </p>
                 </div>
             </div>
@@ -289,7 +289,7 @@
                         <h1 class="px-3 fw-bolder" style="color: white; font-size: 64px;">The Duara</h1>
                     </div>
                   <div class="dejoke justice">
-                    <p class="text-start mt-3 lh-lg" style="color: white"; ><span class="fw-bold">Lorem ipsium is simply a dummy text of the printing and typesetting industry.</span> 
+                    <p class="text-start mt-3 ps-2 lh-lg" style="color: white"; ><span class="fw-bold">Lorem ipsium is simply a dummy text of the printing and typesetting industry.</span> 
                         Lorem Ipsium has been the industry's standard dummy text ever since the 1500s. 
                         when an unknown printer took a gallery of type and scrambled it to make a type 
                         specimen book. it has survived not only five centuries, but also the leap into 
