--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
           <div class="row justify-content m-0 p-0 align-items-center bg-dark w-100">
               <div class="col-lg-8 col-md-8 col-sm-12 mx-auto left-mkutano-section py-5">
                   <div class="card bg-transparent mx-auto border-0">
-                      <div class="bigger mx-auto bg-danger">
+                      <div class="bigger mx-auto">
                           <div class="first-part d-flex  d-flex-mb mx-3">
                               <img src="simple-soul-img/Group 82.png" alt="frame" class="w-auto h-25 web">
                               <h1 class="fs-1">The <span class="color">Mkutano</span></h1>
