worked more on responsiveness

--- a/index.html
+++ b/index.html
@@ -165,15 +165,13 @@
             </div>
         </div>
     </div>
-    </section>                         
-              
-  <!-- The Muktano Section -->
-
-  <div id="mkutano-section">
+    </section>                                  
+    <!-- The Muktano Section -->
+    <div id="mkutano-section">
       <div class="no-pad">
           <div class="row justify-content m-0 p-0 align-items-center bg-dark w-100">
               <div class="col-lg-8 col-md-8 col-sm-12 mx-auto left-mkutano-section py-5">
-                  <div class="card bg-transparent mx-auto border-0">
+                  <div class="card bg-transparent mx-auto border-0 ps-2">
                       <div class="bigger mx-auto">
                           <div class="first-part d-flex  d-flex-mb mx-3">
                               <img src="simple-soul-img/Group 82.png" alt="frame" class="w-auto h-25 web">
@@ -204,9 +202,7 @@
             </div>
         </div>
     </div>
-
-  <!-- creative section -->
-
+    <!-- creative section -->
     <section id="creative-section" class=" overflow-hidden">
         <div class="row">
             <div class="col-lg-4 col-md-6 col-12">
@@ -220,7 +216,7 @@
                         <span class="fw-bold"> Lorem Ipsum is simply dummy  text of the printing  and typesetting industry.</span> Lorem Ipsum has been the  industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and    scrambled it to make a type specimen book. It has  survived not only five centuries, but also the leap  into electronic typesetting, remaining essentially  unchanged.
                     </p>
                     <p class="creative-text">
-                     Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
+                        Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
                     </p>
                 </div>
             </div>
@@ -237,9 +233,7 @@
             </div>    
         </div>
     </section>
-
     <!-- incentive section -->
-
     <section id="incentive-section">
         <div class="row flex justify-content-between m-0 w-100">
             <div class="col-lg-6 col-12 left-incentive-section mx-auto">
@@ -272,40 +266,39 @@
             </div>
         </div>
     </section>
-
-
     <!-- Daura section -->
     <div class="section-6 py-5" style="background: #0B131F;">
         <div class="container">
             <div class="row text-center py-1">
                 <div class="col-lg-6 md-12 sm-12">
                     <div class="picture">
-                        <img src="khalid-img/Group.png" alt="group" style="width: 100%;">
+                        <img src="khalid-img/Group.png" alt="group" class="img-fluid ps-3">
                     </div>
                 </div>
                 <div class="col-lg-6 col-sm-12">
                     <div class="content d-flex justify-content-end pb-3 " style= "border-bottom: 2px white solid;">
-                        <img src="khalid-img/rec_icon.png" alt="nullcircle" style="height: 60px">
+                        <img src="khalid-img/rec_icon.png" alt="nullcircle" class="ps-2" style="height: 60px">
                         <h1 class="px-3 fw-bolder" style="color: white; font-size: 64px;">The Duara</h1>
                     </div>
-                  <div class="dejoke justice">
+                    <div class="dejoke justice">
                     <p class="text-start mt-3 ps-2 lh-lg" style="color: white"; ><span class="fw-bold">Lorem ipsium is simply a dummy text of the printing and typesetting industry.</span> 
                         Lorem Ipsium has been the industry's standard dummy text ever since the 1500s. 
                         when an unknown printer took a gallery of type and scrambled it to make a type 
                         specimen book. it has survived not only five centuries, but also the leap into 
                         electronic typesetting, remaining especially unchanged. 
-                     </p>
-                     <div class="content d-flex " >
-                         <img src="khalid-img/logo.png" alt="logo" style="height: 18px;">
-                         <p class="ps-2" style="color: white; "><span class="fw-bold">More</span> Info</p>
-                     </div>
-                  </div>
-                    <img src="khalid-img/exp_icon.png" alt="exp_icon" class="d-none d-lg-block" style="height: 70px; position: absolute; right: 50px; top: 440px;">
+                        </p>
+                        <div class="content d-flex ps-2">
+                            <img src="khalid-img/logo.png" alt="logo" style="height: 18px;">
+                            <p class="ps-2 mb-0" style="color: white; "><span class="fw-bold">More</span> Info</p>
+                        </div>
+                    </div>
+                    <div class="content-image text-end ">
+                        <img src="khalid-img/exp_icon.png" alt="exp_icon" class="img-fluid">
+                    </div>
                 </div>
             </div>
         </div>
     </div>   
-
     <div class="container">
         <div class="row justify-content-center my-5 text-center align-items-center mx-auto " style="padding: 10px 0;">
             <div class="col-lg-4 col-md-6 col-sm-12">
@@ -352,7 +345,6 @@
             </div>
         </div>
     </div>
-
     <!-- Team section -->
     <section class="team-section">
         <div class="bg-prim text-center text-lg-start text-md-center text-sm-center py-4 text-white">
@@ -443,7 +435,6 @@
             </div>
         </div>
     </section>
-
     <!-- partners section -->
     <section id="our-partners-section" class="text-white" style="background-color: #B91869;">
         <div class="container">
@@ -473,7 +464,6 @@
             </div>
         </div>
     </section>
-
     <!-- testimonial section -->
     <section id="testimonial-section" class="pb-5" style="background-color: #EDEDED;">
         <div class="container">
@@ -511,7 +501,6 @@
             </div>
         </div>
     </section>
-
     <!-- statistics section -->
     <section id="statistics-section" class="text-white py-5" style="background-color: #0B131F;">
         <div class="container">
@@ -562,7 +551,6 @@
             </div>
         </div>
     </section>
-
     <!-- contact section -->
     <section id="contact-section" class="pb-5">
         <div class="container">
@@ -693,7 +681,6 @@
             </div>
         </div>
     </section>
-
     <!-- footer section -->
     <footer>
         <div class="container-fluid text-white">
